--- a/views/main/index.html
+++ b/views/main/index.html
@@ -644,7 +644,7 @@
     </ul>
     <div class="training_block clearfix">
         <div class="training_part">
-            <div class="training_img">
+            <div class="training_img dynamic">
                 <i></i>
                 <p><a href="">GRE</a></p>
                 <p><a href="">考试动态</a></p>
@@ -659,77 +659,77 @@
             </div>
         </div>
         <div class="training_part">
-            <div class="training_img">
+            <div class="training_img skill">
                 <i></i>
                 <p><a href="">GRE</a></p>
                 <p><a href="">学习技巧</a></p>
             </div>
             <div class="training_content">
                 <ul>
-                    <li><span>●</span><a href="">GRE备考：单词和语法知识基础圣诞上单速度是</a></li>
-                    <li><span>●</span><a href="">GRE考试答题节奏 注意事项训练方法</a></li>
-                    <li><span>●</span><a href="">GRE填空的四大类特点（上）</a></li>
-                    <li><span>●</span><a href="">新、老GRE考试的填空题型有什么差异？</a></li>
+                    <li><span>●</span><a href="">先考托福还是GRE？GRE单词怎么背？</a></li>
+                    <li><span>●</span><a href="">怎样才能提升GRE备考效率？</a></li>
+                    <li><span>●</span><a href="">GRE填空中的‘踩脚’现象</a></li>
+                    <li><span>●</span><a href="">新GRE词汇备考需要多少时间？</a></li>
                 </ul>
             </div>
         </div>
         <div class="training_part last_part">
-            <div class="training_img">
+            <div class="training_img experience">
                 <i></i>
                 <p><a href="">GRE</a></p>
                 <p><a href="">学习经验</a></p>
             </div>
             <div class="training_content">
                 <ul>
-                    <li><span>●</span><a href="">GRE备考：单词和语法知识基础圣诞上单速度是</a></li>
-                    <li><span>●</span><a href="">GRE考试答题节奏 注意事项训练方法</a></li>
-                    <li><span>●</span><a href="">GRE填空的四大类特点（上）</a></li>
-                    <li><span>●</span><a href="">新、老GRE考试的填空题型有什么差异？</a></li>
+                    <li><span>●</span><a href="">十天拿下GRE单词不是梦</a></li>
+                    <li><span>●</span><a href="">如何打好GRE阅读复习基础？</a></li>
+                    <li><span>●</span><a href="">GRE填空技巧：句子分隔法</a></li>
+                    <li><span>●</span><a href="">一些GRE词汇备考的小心得</a></li>
                 </ul>
             </div>
         </div>
         <div class="training_part">
-        <div class="training_img">
+        <div class="training_img direct">
             <i></i>
             <p><a href="">GRE</a></p>
             <p><a href="">名师指导</a></p>
         </div>
         <div class="training_content">
             <ul>
-                <li><span>●</span><a href="">GRE备考：单词和语法知识基础圣诞上单速度是</a></li>
-                <li><span>●</span><a href="">GRE考试答题节奏 注意事项训练方法</a></li>
-                <li><span>●</span><a href="">GRE填空的四大类特点（上）</a></li>
-                <li><span>●</span><a href="">新、老GRE考试的填空题型有什么差异？</a></li>
+                <li><span>●</span><a href="">看美剧《纸牌屋》，学GRE单词用法</a></li>
+                <li><span>●</span><a href="">揭秘GRE机经正确用法 摆正心态才能用</a></li>
+                <li><span>●</span><a href="">GRE填空多空题怎么搞定？</a></li>
+                <li><span>●</span><a href="">GRE填空并列关系题型解析</a></li>
             </ul>
         </div>
     </div>
         <div class="training_part">
-            <div class="training_img">
+            <div class="training_img guide">
                 <i></i>
                 <p><a href="">GRE</a></p>
                 <p><a href="">考试指南</a></p>
             </div>
             <div class="training_content">
                 <ul>
-                    <li><span>●</span><a href="">GRE备考：单词和语法知识基础圣诞上单速度是</a></li>
-                    <li><span>●</span><a href="">GRE考试答题节奏 注意事项训练方法</a></li>
-                    <li><span>●</span><a href="">GRE填空的四大类特点（上）</a></li>
-                    <li><span>●</span><a href="">新、老GRE考试的填空题型有什么差异？</a></li>
+                    <li><span>●</span><a href="">GRE考位查询显示暂满是否还能报名？</a></li>
+                    <li><span>●</span><a href="">2017年GRE考试日期安排</a></li>
+                    <li><span>●</span><a href="">GRE考试点都有哪些？</a></li>
+                    <li><span>●</span><a href="">2016年2月26日GRE成绩查询入口</a></li>
                 </ul>
             </div>
         </div>
         <div class="training_part last_part">
-            <div class="training_img">
+            <div class="training_img learn">
                 <i></i>
                 <p><a href="">GRE</a></p>
                 <p><a href="">英语学习</a></p>
             </div>
             <div class="training_content">
                 <ul>
-                    <li><span>●</span><a href="">GRE备考：单词和语法知识基础圣诞上单速度是</a></li>
-                    <li><span>●</span><a href="">GRE考试答题节奏 注意事项训练方法</a></li>
-                    <li><span>●</span><a href="">GRE填空的四大类特点（上）</a></li>
-                    <li><span>●</span><a href="">新、老GRE考试的填空题型有什么差异？</a></li>
+                    <li><span>●</span><a href="">学俚语单词：stomping ground...</a></li>
+                    <li><span>●</span><a href="">社交媒体带来的恐慌症</a></li>
+                    <li><span>●</span><a href="">最高档的员工餐厅</a></li>
+                    <li><span>●</span><a href="">历史上的March 27</a></li>
                 </ul>
             </div>
         </div>
@@ -737,14 +737,153 @@
 </section>
 <!--能力培训结束-->
 
+<!--教师阵容开始-->
+<section class="teacher clearfix">
+    <h1>全明星师资阵容</h1>
+    <p>他们都在这里，你还要去哪儿学</p>
+    <ul class="teacher_part line_1 clearfix">
+        <li>
+            <a href="">
+                <i class="teacher_img teacher_1"></i>
+                <h3>韦晓亮</h3>
+                <p>GRE/GMAT写作首尊</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <i class="teacher_img teacher_1"></i>
+                <h3>韦晓亮</h3>
+                <p>GRE/GMAT写作首尊</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <i class="teacher_img teacher_1"></i>
+                <h3>韦晓亮</h3>
+                <p>GRE/GMAT写作首尊</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <i class="teacher_img teacher_1"></i>
+                <h3>韦晓亮</h3>
+                <p>GRE/GMAT写作首尊</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <i class="teacher_img teacher_1"></i>
+                <h3>韦晓亮</h3>
+                <p>GRE/GMAT写作首尊</p>
+            </a>
+        </li>
+        <li class="last_part">
+            <a href="">
+                <i class="teacher_img teacher_1"></i>
+                <h3>韦晓亮</h3>
+                <p>GRE/GMAT写作首尊</p>
+            </a>
+        </li>
+    </ul>
+    <ul class="teacher_part line_2 clearfix">
+        <li>
+            <a href="">
+                <i class="teacher_img teacher_1"></i>
+                <h3>韦晓亮</h3>
+                <p>GRE/GMAT写作首尊</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <i class="teacher_img teacher_1"></i>
+                <h3>韦晓亮</h3>
+                <p>GRE/GMAT写作首尊</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <i class="teacher_img teacher_1"></i>
+                <h3>韦晓亮</h3>
+                <p>GRE/GMAT写作首尊</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <i class="teacher_img teacher_1"></i>
+                <h3>韦晓亮</h3>
+                <p>GRE/GMAT写作首尊</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <i class="teacher_img teacher_1"></i>
+                <h3>韦晓亮</h3>
+                <p>GRE/GMAT写作首尊</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <i class="teacher_img teacher_1"></i>
+                <h3>韦晓亮</h3>
+                <p>GRE/GMAT写作首尊</p>
+            </a>
+        </li>
+        <li class="last_part">
+            <a href="">
+                <i class="teacher_img teacher_1"></i>
+                <h3>韦晓亮</h3>
+                <p>GRE/GMAT写作首尊</p>
+            </a>
+        </li>
+    </ul>
+    <ul class="teacher_part line_1 clearfix">
+    <li>
+        <a href="">
+            <i class="teacher_img teacher_1"></i>
+            <h3>韦晓亮</h3>
+            <p>GRE/GMAT写作首尊</p>
+        </a>
+    </li>
+    <li>
+        <a href="">
+            <i class="teacher_img teacher_1"></i>
+            <h3>韦晓亮</h3>
+            <p>GRE/GMAT写作首尊</p>
+        </a>
+    </li>
+    <li>
+        <a href="">
+            <i class="teacher_img teacher_1"></i>
+            <h3>韦晓亮</h3>
+            <p>GRE/GMAT写作首尊</p>
+        </a>
+    </li>
+    <li>
+        <a href="">
+            <i class="teacher_img teacher_1"></i>
+            <h3>韦晓亮</h3>
+            <p>GRE/GMAT写作首尊</p>
+        </a>
+    </li>
+    <li>
+        <a href="">
+            <i class="teacher_img teacher_1"></i>
+            <h3>韦晓亮</h3>
+            <p>GRE/GMAT写作首尊</p>
+        </a>
+    </li>
+    <li class="last_part">
+        <a href="">
+            <i class="teacher_img teacher_1"></i>
+            <h3>韦晓亮</h3>
+            <p>GRE/GMAT写作首尊</p>
+        </a>
+    </li>
+</ul>
+    <a href="" class="teacher_more">查看更多</a>
+</section>
+<!--教师阵容结束-->
 
-
-
-
-
-
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <!--底部版权开始-->
 <footer class="footer">
     <div class="catalog">
@@ -841,5 +980,19 @@
     </div>
 </div>
 <!--友情链接结束-->
+
+<!--电话咨询栏开始-->
+<div class="tel_call" style="display: none">
+    <em></em>
+    <p>免费电话咨询</p>
+    <i></i>
+    <input type="text" name="number" placeholder="请输入你的电话号码">
+    <div class="tel_on">立即免费通话</div>
+</div>
+<div class="tel_logo">
+    <div class="tel_title">免费通话</div>
+    <i></i>
+</div>
+<!--电话咨询栏结束-->
 </body>
 </html>
