--- a/public/css/main_index.css
+++ b/public/css/main_index.css
@@ -1037,7 +1037,7 @@ body{
 */
 .teacher{
     width:1140px;
-    margin: 0 auto 40px;
+    margin: 0 auto 60px;
 }
 .teacher h1{
     text-align: center;
@@ -1103,6 +1103,60 @@ body{
 /*教师阵容样式修改*/
 .teacher .line_2{
     padding: 0;
+}
+
+/*
+    联系方式
+*/
+.connect{
+    width: 1140px;
+    margin: 0 auto 30px;
+    position: relative;
+}
+.connect span{
+    position: absolute;
+    left:100px;
+    top: 2px;
+    color: #666;
+    font-size: 17px;
+    line-height: 50px;
+}
+.connect .company_img{
+    display: block;
+    width: 176px;
+    height: 115px;
+    background: url("/public/images/company_logo.png") no-repeat;
+    background-size: cover;
+    margin: 30px 20px 0 0;
+    float: left;
+}
+.connect .connect_right{
+    float: left;
+    margin: 30px 0;
+}
+.connect .connect_right h3{
+    font-size: 16px;
+    line-height: 30px;
+    clear: both;
+}
+.connect .connect_right .address{
+    width: 944px;
+    padding: 15px 0;
+    border-top: 1px solid #999;
+    float: left;
+}
+.connect .connect_right p{
+    font-size: 12px;
+    line-height: 20px;
+}
+.connect .connect_right i{
+    margin: 0 0 0 20px;
+    display: block;
+    width: 200px;
+    height: 75px;
+    float: right;
+    background: url("/public/images/company_life.png") no-repeat;
+    background-size: cover;
 }
 
 
@@ -1226,6 +1280,7 @@ body{
     background-color: #fff;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
+    overflow: hidden;
 }
 .tel_call em{
     display: block;
@@ -1244,6 +1299,7 @@ body{
     color: #666;
     font-weight: bold;
     margin: 5px 0;
+    white-space: nowrap;
 }
 .tel_call i{
     display: block;
@@ -1288,6 +1344,7 @@ body{
     background-color: #337ab7;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
+    overflow: hidden;
     cursor: pointer;
 }
 .tel_logo .tel_title{
