--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -3,6 +3,6 @@
 {% block main %}
 <div class="jumbotron">
     <h1>你好，admin！</h1>
-    <p>欢迎来到海外留学网后台管理</p>
+    <p style="line-height: 50px">欢迎来到海外留学网后台管理</p>
 </div>
 {% endblock %}
