--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -20,9 +20,24 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="#">用户管理</a></li>
-<!--
+                <!--<li><a href="/admin/user">用户管理</a></li>-->
                 <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">用户管理<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/admin/user">用户列表</a></li>
+                        <li><a href="/admin/user/add">用户添加</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">导航管理<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/admin/navigation">导航列表</a></li>
+                        <li><a href="/admin/navigation/add">导航添加</a></li>
+                        <li><a href="/admin/navigation/title">导航内容列表</a></li>
+                        <li><a href="/admin/navigation/title/add">导航内容添加</a></li>
+                    </ul>
+                </li>
+<!--                <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
@@ -33,8 +48,7 @@
                         <li role="separator" class="divider"></li>
                         <li><a href="#">One more separated link</a></li>
                     </ul>
-                </li>
--->
+                </li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
