--- a/views/admin/navigation_title_add.html
+++ b/views/admin/navigation_title_add.html
@@ -20,6 +20,8 @@
     <div class="form-group">
         <label for="Nav_title">内容标题：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_title" placeholder="请输入内容标题名称" name="Nav_title">
+        <label for="Nav_title_order">内容标题顺序：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_title_order" placeholder="请输入内容标题顺序，小数字排前面，默认0" name="Nav_title_order">
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
