--- a/views/admin/navigation_title_edit.html
+++ b/views/admin/navigation_title_edit.html
@@ -25,6 +25,8 @@
     <div class="form-group">
         <label for="Nav_title">导航内容标题：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_title" value="{{nav_title.Nav_title}}" name="Nav_title">
+        <label for="Nav_title_order">导航内容标题顺序：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_title_order" value="{{nav_title.Nav_title_order}}" name="Nav_title_order">
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
