--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -33,8 +33,8 @@
                     <ul class="dropdown-menu">
                         <li><a href="/admin/navigation">导航列表</a></li>
                         <li><a href="/admin/navigation/add">导航添加</a></li>
-                        <li><a href="/admin/navigation/title">导航内容标题列表</a></li>
-                        <li><a href="/admin/navigation/title/add">导航内容标题添加</a></li>
+                        <li><a href="/admin/navigation/title">导航标题列表</a></li>
+                        <li><a href="/admin/navigation/title/add">导航标题添加</a></li>
                         <li><a href="/admin/navigation/title/content">标题内容列表</a></li>
                         <li><a href="/admin/navigation/title/content/add">标题内容列表添加</a></li>
                     </ul>
