--- a/views/admin/navigation_title.html
+++ b/views/admin/navigation_title.html
@@ -3,17 +3,17 @@
 {% block main %}
 <ol class="breadcrumb">
     <li><a href="/">官网首页</a></li>
-    <li><span>导航内容标题列表</span></li>
+    <li><span>导航标题列表</span></li>
 </ol>
 
-<h3 style="font-size: 24px;font-weight: bold; line-height: 50px">导航内容标题列表</h3>
+<h3 style="font-size: 24px;font-weight: bold; line-height: 50px">导航标题列表</h3>
 
 <table class="table table-hover table-striped">
     <tr>
         <th>ID</th>
         <th>导航名称</th>
-        <th>内容标题</th>
-        <th>内容标题顺序</th>
+        <th>标题</th>
+        <th>标题顺序</th>
         <th>操作</th>
     </tr>
     {% for nav_title in Nav_titles %}
