--- a/views/admin/navigation_title_add.html
+++ b/views/admin/navigation_title_add.html
@@ -3,10 +3,10 @@
 {% block main %}
 <ol class="breadcrumb">
     <li><a href="/">官网首页</a></li>
-    <li><span>导航内容标题添加</span></li>
+    <li><span>导航标题添加</span></li>
 </ol>
 
-<h3 style="font-size: 24px;font-weight: bold; line-height: 50px;margin-bottom: 20px;border-bottom: 1px solid #ccc">导航内容标题添加</h3>
+<h3 style="font-size: 24px;font-weight: bold; line-height: 50px;margin-bottom: 20px;border-bottom: 1px solid #ccc">导航标题添加</h3>
 
 <form role="form" method="post">
     <div class="form-group">
@@ -18,9 +18,9 @@
         </select>
     </div>
     <div class="form-group">
-        <label for="Nav_title">内容标题：</label>
+        <label for="Nav_title">标题：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_title" placeholder="请输入内容标题名称" name="Nav_title">
-        <label for="Nav_title_order">内容标题顺序：</label>
+        <label for="Nav_title_order">标题顺序：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_title_order" placeholder="请输入内容标题顺序，小数字排前面，默认0" name="Nav_title_order">
     </div>
     <button type="submit" class="btn btn-default">提交</button>
