--- a/views/admin/page.html
+++ b/views/admin/page.html
@@ -4,9 +4,9 @@
         <li class="previous"><a href="/admin/{{forPage}}?page={% if (page-1)<1 %}{{1}}{%else%}{{page-1}}{%endif%}"><span aria-hidden="true">&larr;</span> 上一页</a></li>
 
         <li style="padding-left: 40px">
-            一共有<b>{{count}}</b>条数据&nbsp;&nbsp;&nbsp;&nbsp;共<b>{{pages}}</b>页&nbsp;&nbsp;&nbsp;&nbsp;每页显示<b>{{limit}}</b>条数据&nbsp;&nbsp;&nbsp;&nbsp;
+            一共有<b>{{count}}</b>条数据&nbsp;&nbsp;&nbsp;&nbsp;共<b>{% if pages<1 %}{{1}}{%else%}{{pages}}{%endif%}</b>页&nbsp;&nbsp;&nbsp;&nbsp;每页显示<b>{{limit}}</b>条数据&nbsp;&nbsp;&nbsp;&nbsp;
         </li>
 
-        <li class="next"><a href="/admin/{{forPage}}?page={% if (page+1)>pages %}{{pages}}{% else %}{{page+1}}{%endif%}">下一页 <span aria-hidden="true">&rarr;</span></a></li>
+        <li class="next"><a href="/admin/{{forPage}}?page={% if pages<1 %}{{1}}{% elseif (page+1)>pages %}{{pages}}{% else %}{{page+1}}{%endif%}">下一页 <span aria-hidden="true">&rarr;</span></a></li>
     </ul>
 </nav>
