--- a/views/admin/navigation_title_content_add.html
+++ b/views/admin/navigation_title_content_add.html
@@ -9,25 +9,24 @@
 <h3 style="font-size: 24px;font-weight: bold; line-height: 50px;margin-bottom: 20px;border-bottom: 1px solid #ccc">标题内容添加</h3>
 
 <form role="form" method="post">
-<!--    <div class="form-group">
+    <div class="form-group">
         <label for="navigation">导航名称：</label>
         <select name="navigation" id="navigation" class="form-control" style="margin: 10px 0">
+            <option value="">请选择导航名称</option>
             {% for navigation in navigations %}
             <option value="{{navigation.id}}">{{navigation.Nav_name}}</option>
             {% endfor %}
         </select>
-    </div>-->
+    </div>
     <div class="form-group">
         <label for="nav_title">标题名称：</label>
         <select name="nav_title" id="nav_title" class="form-control" style="margin: 10px 0">
-            {% for nav_title in nav_titles %}
-            <option value="{{nav_title.id}}">{{nav_title.navigation.Nav_name}}---{{nav_title.Nav_title}}</option>
-            {% endfor %}
+            <option value="">请选择导航标题</option>
         </select>
     </div>
     <div class="form-group">
-        <label for="Nav_title_name">标题内容：</label>
-        <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_title_name" placeholder="请输入内容标题名称" name="Nav_title_name">
+        <label for="Nav_content_name">标题内容：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_content_name" placeholder="请输入内容标题名称" name="Nav_content_name">
         <label for="Nav_content_url">标题url：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_content_url" placeholder="请输入标题内容跳转链接" name="Nav_content_url">
         <label for="Nav_content_order">内容标题顺序：</label>
@@ -35,5 +34,5 @@
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
-
+<script src="/public/js/system.js"></script>
 {% endblock %}
