--- a/views/admin/navigation_title_content_edit.html
+++ b/views/admin/navigation_title_content_edit.html
@@ -36,9 +36,11 @@
     </div>
 
     <div class="form-group">
-        <label for="Nav_content">导航内容标题：</label>
-        <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_content" value="{{nav_content.Nav_content_name}}" name="Nav_content">
-        <label for="Nav_content_order">导航内容标题顺序：</label>
+        <label for="Nav_content_name">标题内容：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_content_name" value="{{nav_content.Nav_content_name}}" name="Nav_content_name">
+        <label for="Nav_content_url">标题内容url：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_content_url" value="{{nav_content.Nav_content_url}}" name="Nav_content_url">
+        <label for="Nav_content_order">标题内容顺序：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_content_order" value="{{nav_content.Nav_content_order}}" name="Nav_content_order">
     </div>
     <button type="submit" class="btn btn-default">提交</button>
