--- a/public/css/main_index.css
+++ b/public/css/main_index.css
@@ -1,20 +1,44 @@
 body{
 }
 /*
-    顶头图片，含导航、登录、注册
+    顶头图片
 */
 .big{
-    background: url("../images/banner.png") no-repeat top center;
+    position: relative;
+}
+.big div{
+    background: url("../images/head/banner1.png") no-repeat top center;
+    background-size: cover;
     width: 100%;
     min-width: 1140px;
-    margin: 0 auto;
-    background-size: cover;
     height: 180px;
 }
+/*
+    不同图片样式
+*/
+.big div:nth-child(2){
+    display: none;
+    background: url("../images/head/banner2.png") no-repeat top center;
+}
+.big div:nth-child(3){
+    display: none;
+    background: url("../images/head/banner3.png") no-repeat top center;
+}
+.big div:nth-child(4){
+    display: none;
+    background: url("../images/head/banner4.png") no-repeat top center;
+}
+
+/*
+    导航、登录、注册
+*/
 .hold{
     width: 100%;
     margin: auto;
     background-color: rgba(0,0,0,.3);
+    position: absolute;
+    top: 0;
+    left:0;
 }
 .container{
     width: 1140px;
@@ -105,7 +129,7 @@ body{
 }
 .login,.register{
     width: 404px;
-    background-color: white;
+    background-color: rgba(255,255,255,0.95);
     border: 1px solid darkgray;
     padding: 50px;
     position: relative;
@@ -123,7 +147,7 @@ body{
     width: 21px;
     height: 21px;
     display: block;
-    background: url("../images/closeicon.png") no-repeat center top;
+    background: url("../images/icon/closeicon.png") no-repeat center top;
     position: absolute;
     top: 5px;
     right: 5px;
@@ -200,6 +224,7 @@ body{
     height: 460px;
     position: absolute;
     z-index: 1;
+    overflow: hidden;
 }
 .menu .server h3{
     line-height: 40px;
@@ -214,8 +239,8 @@ body{
     margin: 0;
 }
 .menu .server .server_part{
-    padding: 20px 10px 10px;
-    border-bottom: 1px solid #222;
+    padding: 12px 10px 10px;
+    border-bottom: 1px solid #999;
     display: block;
 }
 .menu .server .server_part a:hover{
@@ -258,6 +283,9 @@ body{
 .menu .navigation .nav_head:hover{
     background-color: #337ab7;
     cursor: pointer;
+}
+.menu .navigation .nav_head:hover .nav_content{
+    display: block;
 }
 .menu .navigation .nav_content{
     position: absolute;
@@ -313,6 +341,7 @@ body{
 */
 .ban_bg{
     position: relative;
+    height: 420px;
 }
 .ban_bg .bg_part{
     list-style: none;
@@ -326,7 +355,9 @@ body{
     width: 100%;
     min-width: 1140px;
     height: 420px;
-    background: url("http://liuxue.zmnedu.com/static/index/images/ban_c.jpg") no-repeat top center;
+    background: url("/public/images/head/ban_bg1.png") no-repeat top center;
+    background-size: cover;
+    /*background: url("http://liuxue.zmnedu.com/static/index/images/ban_c.jpg") no-repeat top center;*/
 }
 .ban_bg .extra{
     position: relative;
@@ -350,10 +381,26 @@ body{
     float: left;
     background-color: white;
     margin-right: 10px;
-}
-.ban_bg .bg_btn li:hover{
-    background-color: #337ab7;
     cursor: pointer;
+}
+.ban_bg .bg_btn li:nth-child(1){
+    background-color: #337ab7;
+}
+
+/*
+    轮换图片修改样式
+*/
+.ban_bg .bg_part li:nth-child(2) a{
+    display: none;
+    background: url("/public/images/head/ban_bg2.png") no-repeat top center;
+}
+.ban_bg .bg_part li:nth-child(3) a{
+    display: none;
+    background: url("/public/images/head/ban_bg3.png") no-repeat top center;
+}
+.ban_bg .bg_part li:nth-child(4) a{
+    display: none;
+    background: url("/public/images/head/ban_bg4.png") no-repeat top center;
 }
 
 
@@ -421,6 +468,7 @@ body{
 .school .school_search{
     float: left;
     width: 320px;
+    overflow: hidden;
 }
 .school .school_search h3{
     font-size: 16px;
@@ -439,7 +487,7 @@ body{
     width: 200px;
     height: 34px;
     padding-left: 35px;
-    background: url("/public/images/search_icon.png") no-repeat -25px -52px;
+    background: url("/public/images/icon/search_icon.png") no-repeat -25px -52px;
 }
 #school_name{
     width: 100%;
@@ -460,6 +508,8 @@ body{
     text-align: center;
     color: #fff;
     font-weight: bold;
+    border: none;
+    outline: none;
 }
 .school .school_search_content p{
     margin-top: 50px;
@@ -467,41 +517,24 @@ body{
     font-weight: 700;
     color: #818181;
 }
-.school .school_search_content .school_img{
+.school .school_search_content .school_area{
     width: 100%;
-    height: 176px;
-}
-#uk,#au,#usa,#nz,#jpn,#sg{
-    display: block;
     float: left;
 }
-#uk div,#au div,#usa div,#nz div,#jpn div,#sg div{
+.school_area a{
     float: left;
     border: 1px solid #d9e8ff;
     position: relative;
     height: 36px;
     width: 113px;
-    margin: 22px 0 10px 10px;
-}
-#uk div:hover,#au div:hover,#usa div:hover,#nz div:hover,#jpn div:hover,#sg div:hover{
-    border: 2px solid #337ab7;
-    padding: 0;
-}
-#uk i,#au i,#usa i,#nz i,#jpn i,#sg i{
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    float: left;
-    display: block;
-    width: 60px;
-    height: 53px;
-}
-#uk span,#au span,#usa span,#nz span,#jpn span,#sg span{
-    float: left;
-    display: block;
-    text-align: center;
     line-height: 36px;
-    margin-left: 60px;
+    text-align: center;
+    margin: 22px 0 10px 10px;
+    font-size: 16px;
+}
+.school_area a:hover{
+    border: 1px solid #337ab7;
+    font-size: 15px;
 }
 
 /*
@@ -527,6 +560,9 @@ body{
     float: left;
     text-align: center;
     padding-bottom: 11px;
+}
+.school_news .school_news_title a:nth-child(1){
+    color: #337ab7;
 }
 .school_news .school_strategy{
     padding: 20px 0 0 ;
@@ -999,7 +1035,7 @@ body{
     display: block;
     width:46px;
     height: 46px;
-    background: url("/public/images/traning_icon.png") -3px -55px;
+    background: url("/public/images/icon/traning_icon.png") -3px -55px;
 }
 .training_part .training_img p{
     text-align: center;
@@ -1038,19 +1074,19 @@ body{
 
 /*培训模版样式修改*/
 .training_part .skill i{
-    background: url("/public/images/traning_icon.png") -61px -55px;
+    background: url("/public/images/icon/traning_icon.png") -61px -55px;
 }
 .training_part .experience i{
-    background: url("/public/images/traning_icon.png") -126px -58px;
+    background: url("/public/images/icon/traning_icon.png") -126px -58px;
 }
 .training_part .direct i{
-    background: url("/public/images/traning_icon.png") -249px -63px;
+    background: url("/public/images/icon/traning_icon.png") -249px -63px;
 }
 .training_part .guide i{
-    background: url("/public/images/traning_icon.png") -366px -55px;
+    background: url("/public/images/icon/traning_icon.png") -366px -55px;
 }
 .training_part .learn i{
-    background: url("/public/images/traning_icon.png") -416px -67px;
+    background: url("/public/images/icon/traning_icon.png") -416px -67px;
 }
 
 
